Added new question functionality and refactored

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <script src="api-control.js"></script>
 </head>
 <body>
-
+    <main>
+        <h1>Trivia</h1>
+        <div id="question-box"></div>
+        <button id="a" class="multiple">A</button>
+        <button id="b" class="multiple">B</button>
+        <button id="c" class="multiple">C</button>
+        <button id="d" class="multiple">D</button>
+        <button id="true" class="tf">True</button>
+        <button id="fal--e" class="tf">False</button>
+        <br>
+        <button id="next-question" onclick="newQuestion()">Next question</button>
+    </main>
 </body>
 </html>
