Fixed handling of buttons

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
         <button id="c" class="multiple">C</button>
         <button id="d" class="multiple">D</button>
         <button id="true" class="tf">True</button>
-        <button id="fal--e" class="tf">False</button>
+        <button id="false" class="tf">False</button>
         <br>
         <button id="next-question" onclick="newQuestion()">Next question</button>
+        <br>
+        <hr>
+        <div id="guess-result"></div>
     </main>
 </body>
 </html>
+
+<!-- TODO: Make it look better -->
